--- a/pages/absence.mdx
+++ b/pages/absence.mdx
@@ -38,7 +38,7 @@ One of the key features of the absence tracking system is its accessible user in
 
 ## Scheduling
 
-The absence tracking system includes a robust scheduling feature that allows students and teachers to view their schedule and manage their attendance. The scheduling feature includes the ability to view upcoming events and absence, and to report absences as necessary. The system also includes the ability to create repeating events, making it easy for administrator to schedule regular classes and for students to keep track of their schedules.
+The absence tracking system includes a robust scheduling feature that allows students and teachers to view their schedule and manage their attendance. The scheduling feature includes the ability to view upcoming events and absence, and to report absences as necessary. The system also includes the ability to create repeating events, making it easy for administrator to schedule classes and for students to keep track of their schedules.
 
 ![Schedule show in the student interface](/images/absence)
 
@@ -46,12 +46,8 @@ The absence tracking system includes a robust scheduling feature that allows stu
 
 The absence tracking system is currently live and can be found at this [address](https://diskret.linjar.se). The website can be used in both English or Swedish. However, as for now, no organization is using the software, as it is still in its initial stage.
 
-I plan to continue developing and refining the system, with the hope of making it a valuable tool for schools and educational institutions. I am committed to making the absence tracking system as useful and user-friendly as possible.
+I plan to continue developing and refining the system, with the hope of making it a valuable tool for schools and educational institutions. I am committed to making the system as useful and user-friendly as possible.
 
 In the future, I plan to market the system to schools and educational institutions, and to build partnerships with organizations that share my vision of creating a better educational experience for everyone. I am excited to see where this project will take me, and I look forward to continuing to improve and refine the project.
-
-## What I have learned
-
-Developing the absence tracking system was a challenging project that required a lot of hard work and dedication. Through the course of the project, I learned a great deal about web development, including the importance of good project planning. Managing a project of this scale. It required me to stay organized and focused.
 
 export default ({ children }) => <Layout meta={meta}>{children}</Layout>;
